--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "express": "^4.15.2",
     "firebase": "^3.9.0",
     "lodash": "^4.17.4",
+    "material-design-lite": "^1.3.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4"
   },
